--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Simply rest server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava 'test/*.js'"
   },
   "author": "Jerry",
   "license": "ISC",
+  "repository": "https://github.com/unidevel/rest-server.git",
   "dependencies": {
     "debug": "^2.2.0",
     "koa-bodyparser": "^2.2.0",
@@ -15,6 +16,7 @@
     "koa.io": "0.0.3"
   },
   "devDependencies": {
-    "superagent": "^2.0.0"
+    "superagent": "^2.0.0",
+    "ava": "^0.15.2"
   }
 }
