--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "debug": "^2.2.0",
     "koa-bodyparser": "^2.2.0",
     "koa-convert": "^1.2.0",
-    "koa.io": "0.0.3"
+    "koa.io": "0.0.3",
+    "mustache": "^2.2.1"
   },
   "devDependencies": {
     "superagent": "^2.0.0",
