--- a/package.json
+++ b/package.json
@@ -8,16 +8,34 @@
   },
   "author": "Jerry",
   "license": "ISC",
-  "repository": "https://github.com/unidevel/rest-server.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/unidevel/rest-server.git"
+  },
+  "keywords": [
+    "web",
+    "rest",
+    "http"
+  ],
   "dependencies": {
     "debug": "^2.2.0",
+    "koa": "^1.2.0",
     "koa-bodyparser": "^2.2.0",
     "koa-convert": "^1.2.0",
-    "koa.io": "0.0.3",
     "mustache": "^2.2.1"
   },
   "devDependencies": {
     "superagent": "^2.0.0",
     "ava": "^0.15.2"
-  }
+  },
+  "engines": {
+    "node": ">= 4.4"
+  },
+  "files": [
+    "lib"
+  ],
+  "bugs": {
+    "url": "https://github.com/unidevel/rest-server/issues"
+  },
+  "homepage": "https://github.com/unidevel/rest-server"
 }
