--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "http"
   ],
   "dependencies": {
+    "co": "^4.6.0",
     "debug": "^2.2.0",
     "koa": "^1.2.0",
     "koa-bodyparser": "^2.2.0",
     "koa-convert": "^1.2.0",
+    "koa-static": "^2.0.0",
+    "koa.io": "0.0.3",
     "mustache": "^2.2.1"
   },
   "devDependencies": {
