--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rest-wrapper",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Simply rest wrapper",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "koa-bodyparser": "^2.2.0",
     "koa-convert": "^1.2.0",
     "koa-static": "^2.0.0",
+    "koa-static-cache": "^3.1.7",
     "koa.io": "0.0.3",
     "mustache": "^2.2.1"
   },
@@ -32,7 +33,7 @@
     "ava": "^0.15.2"
   },
   "engines": {
-    "node": ">= 4.4.0"
+    "node": ">= 4.2.0"
   },
   "files": [
     "lib",
